fix: some styling tweaks in the tags

--- a/src/lib/components/modes/treemode/JSONNode.scss
+++ b/src/lib/components/modes/treemode/JSONNode.scss
@@ -187,6 +187,8 @@
   position: relative;
   display: inline-block;
   padding: 0 4px;
+  line-height: normal;
+  margin: 1px 0;
 
   &:hover {
     opacity: 0.8;
