--- a/src/lib/themes/jse-theme-dark.css
+++ b/src/lib/themes/jse-theme-dark.css
@@ -14,11 +14,15 @@
   /* main menu, modal header */
   --jse-menu-background: #3c3c3c;
   --jse-menu-background-highlight: #565656;
-  --jse-menu-color: #e5e5e5;
-  --jse-modal-background: rgba(255, 255, 255, 0.2);
+  --jse-menu-color: #d4d4d4;
+  --jse-modal-background-color: #2f2f2f;
+  --jse-modal-overlay-background: rgba(255, 255, 255, 0.2);
   --jse-modal-code-background: #2f2f2f;
+  --jse-modal-input-background: #3d3d3d;
+  --background: #3d3d3d;
 
   /* navigation bar, gutter, search box */
+  --jse-panel-background-color: #333333;
   --jse-panel-background-color: #333333;
   --jse-panel-background-border: 1px solid #464646;
   --jse-panel-input-background: #656565;
@@ -52,9 +56,7 @@
   --jse-tag-color: #bdbdbd;
 
   /* input fields in modals */
-  --jse-input-border: 1px solid #737373;
-  --jse-input-border-readonly: 1px solid #3f3f3f;
-  --jse-input-border-focus: 1px solid #3f3f3f;
+  --jse-input-border: 1px solid #4f4f4f;
 
   /* buttons in modals */
   --jse-button-background: #808080;
