--- a/src/lib/components/modals/TransformModal.scss
+++ b/src/lib/components/modals/TransformModal.scss
@@ -164,6 +164,7 @@
   .jse-preview.jse-error {
     flex: 1;
     background: var(--jse-input-background-readonly);
+    border: var(--jse-input-border);
     color: var(--jse-error-color);
     padding: $padding-half;
   }
