--- a/src/lib/components/modals/CopyPasteModal.scss
+++ b/src/lib/components/modals/CopyPasteModal.scss
@@ -11,7 +11,7 @@
     .jse-shortcut {
       .jse-key {
         font-size: 200%;
-        color: var(--jse-menu-background);
+        color: var(--jse-theme-color);
       }
     }
   }
