--- a/src/lib/components/modals/Header.scss
+++ b/src/lib/components/modals/Header.scss
@@ -2,7 +2,7 @@
 
 .jse-header {
   display: flex;
-  background: var(--jse-menu-background);
+  background: var(--jse-theme-color);
   color: var(--jse-menu-color);
 
   .jse-title {
