--- a/src/lib/themes/jse-theme-dark.css
+++ b/src/lib/themes/jse-theme-dark.css
@@ -12,8 +12,8 @@
   --jse-edit-outline: 2px solid #d4d4d4;
 
   /* main menu, modal header */
-  --jse-menu-background: #3c3c3c;
-  --jse-menu-background-highlight: #565656;
+  --jse-theme-color: #3c3c3c;
+  --jse-theme-color-highlight: #565656;
   --jse-menu-color: #d4d4d4;
   --jse-modal-background-color: #2f2f2f;
   --jse-modal-overlay-background: rgba(255, 255, 255, 0.2);
