--- a/src/lib/components/JSONEditor.scss
+++ b/src/lib/components/JSONEditor.scss
@@ -10,7 +10,7 @@
   font-family: var(--jse-font-family);
   font-size: var(--jse-font-size);
   line-height: normal;
-  border: 1px solid var(--jse-menu-background);
+  border: 1px solid var(--jse-theme-color);
   position: relative;
   display: flex;
   flex-direction: row;
