fix: reset line height of drop down buttons

--- a/src/lib/components/controls/DropdownButton.scss
+++ b/src/lib/components/controls/DropdownButton.scss
@@ -2,6 +2,8 @@
 
 .jse-dropdown-button {
   flex: 1;
+  line-height: normal;
+
   $background: var(--jse-context-menu-background);
   $background-highlight: var(--jse-context-menu-background-highlight);
 
