--- a/src/lib/themes/jse-theme-dark.css
+++ b/src/lib/themes/jse-theme-dark.css
@@ -1,7 +1,7 @@
 .jse-theme-dark {
   /* over all colors */
-  --jse-theme-color: #3883fa;
-  --jse-theme-color-highlight: #5f9dff;
+  --jse-theme-color: #2f6dd0;
+  --jse-theme-color-highlight: #467cd2;
   --jse-background-color: #1e1e1e;
   --jse-color: #d4d4d4;
   --jse-selection-background-color: #464646;
