fix: some styling tweaks

--- a/src/lib/themes/jse-theme-default.css
+++ b/src/lib/themes/jse-theme-default.css
@@ -61,7 +61,7 @@
   --jse-panel-input-background: #fff;
   --jse-panel-button-color: inherit;
   --jse-panel-button-background: transparent;
-  --jse-panel-button-color-highlight: #1a1a1a;
+  --jse-panel-button-color-highlight: #4d4d4d;
   --jse-panel-button-background-highlight: #e0e0e0;
 
   /* context menu */
