--- a/src/lib/components/controls/navigationBar/NavigationBarDropdown.scss
+++ b/src/lib/components/controls/navigationBar/NavigationBarDropdown.scss
@@ -7,7 +7,7 @@
   z-index: 3; // above the floating ContextMenuButton
   background: var(--jse-panel-dropdown-background);
   color: var(--jse-panel-dropdown-color);
-  box-shadow: $box-shadow;
+  box-shadow: var(--jse-controls-box-shadow);
   display: flex;
   flex-direction: column;
   max-height: 300px;
