--- a/src/lib/themes/jse-theme-dark.css
+++ b/src/lib/themes/jse-theme-dark.css
@@ -4,7 +4,7 @@
   --jse-theme-color-highlight: #467cd2;
   --jse-background-color: #1e1e1e;
   --jse-color: #d4d4d4;
-  --jse-border: 1px solid #333333;
+  --jse-border: 1px solid #4f4f4f;
   --jse-selection-background-color: #464646;
   --jse-selection-background-dark-color: #343434;
   --jse-selection-background-light-color: #333333;
