fix: editors in Transform Modal not having a border matching the other inputs

--- a/src/lib/components/modals/TransformModal.scss
+++ b/src/lib/components/modals/TransformModal.scss
@@ -134,6 +134,8 @@
     background: var(--jse-input-background-readonly);
     box-shadow: none;
     box-sizing: border-box;
+
+    --jse-border: var(--jse-input-border);
   }
 
   input,
