--- a/src/routes/examples/themes/jse-theme-big.css
+++ b/src/routes/examples/themes/jse-theme-big.css
@@ -24,6 +24,9 @@
   --jse-context-menu-button-size: 32px;
   --jse-context-menu-background: #ff3e00;
   --jse-context-menu-background-highlight: #ea3600;
+  --jse-context-menu-button-background: var(--jse-context-menu-background);
+  --jse-context-menu-button-background-highlight: var(--jse-context-menu-background-highlight);
+  --jse-context-menu-button-color: var(--jse-context-menu-color);
   --jse-context-menu-color: #fff;
   --jse-context-menu-color-disabled: rgba(255, 255, 255, 0.4);
   --jse-context-menu-separator-color: rgba(255, 255, 255, 0.2);
