--- a/src/lib/themes/jse-theme-default.css
+++ b/src/lib/themes/jse-theme-default.css
@@ -74,6 +74,9 @@
   --jse-context-menu-color: #fff;
   --jse-context-menu-color-disabled: #9d9d9d;
   --jse-context-menu-separator-color: #7a7a7a;
+  --jse-context-menu-button-background: var(--jse-context-menu-background);
+  --jse-context-menu-button-background-highlight: var(--jse-context-menu-background-highlight);
+  --jse-context-menu-button-color: var(--jse-context-menu-color);
   --jse-context-menu-button-size: calc(1em + 4px);
   --jse-context-menu-tip-background: rgba(255, 255, 255, 0.2);
   --jse-context-menu-tip-color: inherit;
