--- a/src/lib/themes/jse-theme-dark.css
+++ b/src/lib/themes/jse-theme-dark.css
@@ -12,7 +12,7 @@
   --jse-collapsed-items-link-color: #b2b2b2;
   --jse-collapsed-items-link-color-highlight: #ec8477;
   --jse-hover-background-color: #343434;
-  --jse-edit-outline: 2px solid #d4d4d4;
+  --jse-edit-outline: 2px solid var(--jse-color);
   --jse-a-color: #55abff;
   --jse-a-color-highlight: #4387c9;
 
@@ -22,18 +22,17 @@
   --jse-modal-overlay-background: rgba(0, 0, 0, 0.5);
   --jse-modal-code-background: #2f2f2f;
   --jse-modal-input-background: #3d3d3d;
-  --background: #3d3d3d;
 
   /* navigation bar, gutter, search box */
   --jse-panel-background-color: #333333;
   --jse-panel-background-border: 1px solid #464646;
   --jse-panel-input-background: #656565;
-  --jse-panel-color: #d4d4d4;
+  --jse-panel-color: var(--jse-color);
   --jse-panel-color-readonly: #737373;
   --jse-panel-border: 1px solid #3c3c3c;
   --jse-panel-dropdown-background: #656565;
   --jse-panel-dropdown-background-highlight: #7e7e7e;
-  --jse-panel-dropdown-color: #d4d4d4;
+  --jse-panel-dropdown-color: var(--jse-color);
   --jse-panel-button-color-highlight: #e5e5e5;
   --jse-panel-button-background-highlight: #464646;
 
@@ -41,14 +40,14 @@
   --jse-context-menu-background: #4b4b4b;
   --jse-context-menu-background-highlight: #595959;
   --jse-context-menu-separator-color: #595959;
-  --jse-context-menu-color: #d4d4d4;
+  --jse-context-menu-color: var(--jse-color);
   --jse-context-menu-button-background: #737373;
   --jse-context-menu-button-background-highlight: #818181;
   --jse-context-menu-button-color: var(--jse-context-menu-color);
 
   /* json key and values */
   --jse-key-color: #9cdcfe;
-  --jse-value-color: #d4d4d4;
+  --jse-value-color: var(--jse-color);
   --jse-value-color-number: #b5cea8;
   --jse-value-color-boolean: #569cd6;
   --jse-value-color-null: #569cd6;
@@ -67,7 +66,7 @@
   --jse-tag-color: #bdbdbd;
 
   /* input fields in modals */
-  --jse-input-border: 1px solid #4f4f4f;
+  --jse-input-border: var(--jse-border);
 
   /* buttons in modals */
   --jse-button-background: #808080;
@@ -75,6 +74,7 @@
   --jse-button-color: #e0e0e0;
 
   /* svelte-select component */
+  --background: #3d3d3d;
   --border: 1px solid #4f4f4f;
   --listBackground: #333333;
   --itemHoverBG: #505050;
