--- a/src/lib/themes/jse-theme-default.css
+++ b/src/lib/themes/jse-theme-default.css
@@ -20,6 +20,7 @@
   --jse-theme-color-highlight: #5f9dff;
   --jse-background-color: #fff;
   --jse-color: #4d4d4d;
+  --jse-color-inverse: #fff;
   --jse-border: 1px solid #d7d7d7;
   --jse-error-color: #ee5341;
   --jse-selection-background-color: #d3d3d3;
@@ -32,47 +33,48 @@
   --jse-collapsed-items-link-color-highlight: #ee5341;
   --jse-edit-outline: 2px solid #656565;
   --jse-controls-box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.24);
+  --jse-disabled-color: #9d9d9d;
 
   /* messages */
-  --jse-message-error-background: #ee5341;
-  --jse-message-error-color: #fff;
+  --jse-message-error-background: var(--jse-error-color);
+  --jse-message-error-color: var(--jse-color-inverse);
   --jse-message-warning-background: #fdc539;
-  --jse-message-warning-color: #fff;
+  --jse-message-warning-color: var(--jse-color-inverse);
   --jse-message-success-background: #9ac45d;
-  --jse-message-success-color: #fff;
-  --jse-message-info-background: #9d9d9d;
-  --jse-message-info-color: #fff;
+  --jse-message-success-color: var(--jse-color-inverse);
+  --jse-message-info-background: var(--jse-disabled-color);
+  --jse-message-info-color: var(--jse-color-inverse);
   --jse-message-action-background: rgba(255, 255, 255, 0.2);
   --jse-message-action-background-highlight: rgba(255, 255, 255, 0.3);
 
   /* main menu, modal header */
-  --jse-menu-color: #fff;
+  --jse-menu-color: var(--jse-color-inverse);
   --jse-menu-button-size: 32px;
   --jse-modal-background-color: #f5f5f5;
   --jse-modal-overlay-background: rgba(0, 0, 0, 0.3);
   --jse-modal-code-background: rgba(0, 0, 0, 0.05);
-  --jse-modal-input-background: #fff;
+  --jse-modal-input-background: var(--jse-background-color);
 
   /* navigation bar, gutter, search box */
   --jse-panel-background-color: #ebebeb;
-  --jse-panel-color: #4d4d4d;
+  --jse-panel-color: var(--jse-color);
   --jse-panel-color-light: #656565;
   --jse-panel-color-readonly: #b2b2b2;
-  --jse-panel-border: 1px solid #d7d7d7;
-  --jse-panel-dropdown-background: #fff;
+  --jse-panel-border: var(--jse-border);
+  --jse-panel-dropdown-background: var(--jse-background-color);
   --jse-panel-dropdown-background-highlight: #e5e5e5;
   --jse-panel-dropdown-color: #656565;
-  --jse-panel-input-background: #fff;
+  --jse-panel-input-background: var(--jse-background-color);
   --jse-panel-button-color: inherit;
   --jse-panel-button-background: transparent;
-  --jse-panel-button-color-highlight: #4d4d4d;
+  --jse-panel-button-color-highlight: var(--jse-color);
   --jse-panel-button-background-highlight: #e0e0e0;
 
   /* context menu */
   --jse-context-menu-background: #656565;
   --jse-context-menu-background-highlight: #7a7a7a;
-  --jse-context-menu-color: #fff;
-  --jse-context-menu-color-disabled: #9d9d9d;
+  --jse-context-menu-color: var(--jse-color-inverse);
+  --jse-context-menu-color-disabled: var(--jse-disabled-color);
   --jse-context-menu-separator-color: #7a7a7a;
   --jse-context-menu-button-background: var(--jse-context-menu-background);
   --jse-context-menu-button-background-highlight: var(--jse-context-menu-background-highlight);
@@ -99,22 +101,22 @@
 
   /* inline tags inside the JSON document */
   --jse-tag-background: rgba(0, 0, 0, 0.2);
-  --jse-tag-color: #fff;
+  --jse-tag-color: var(--jse-color-inverse);
 
   /* input fields in modals */
   --jse-input-border: 1px solid #d8dbdf;
-  --jse-input-border-focus: 1px solid #3883fa;
+  --jse-input-border-focus: 1px solid var(--jse-theme-color);
   --jse-input-background-readonly: transparent;
   --jse-input-radius: 3px;
 
   /* buttons in modals */
   --jse-button-background: #e0e0e0;
   --jse-button-background-highlight: #e7e7e7;
-  --jse-button-color: #4d4d4d;
-  --jse-button-primary-background: #3883fa;
-  --jse-button-primary-background-highlight: #5f9dff;
+  --jse-button-color: var(--jse-color);
+  --jse-button-primary-background: var(--jse-theme-color);
+  --jse-button-primary-background-highlight: var(--jse-theme-color-highlight);
   --jse-button-primary-background-disabled: #9d9d9d;
-  --jse-button-primary-color: #fff;
+  --jse-button-primary-color: var(--jse-color-inverse);
 
   /* svelte-select */
   --itemIsActiveBG: #3883fa;
@@ -123,6 +125,6 @@
   --background: #fff;
 
   /* color picker */
-  --jse-color-picker-background: #ebebeb;
+  --jse-color-picker-background: var(--jse-panel-background-color);
   --jse-color-picker-border-box-shadow: #cbcbcb 0 0 0 1px;
 }
