--- a/src/lib/components/modes/treemode/JSONNode.scss
+++ b/src/lib/components/modes/treemode/JSONNode.scss
@@ -3,7 +3,7 @@
 
 .jse-json-node {
   position: relative;
-  color: var(--jse-color);
+  color: var(--jse-text-color);
 
   &.jse-root {
     min-height: 100%;
