--- a/src/lib/components/modals/JSONRepairModal.scss
+++ b/src/lib/components/modals/JSONRepairModal.scss
@@ -9,5 +9,5 @@
   font-size: var(--jse-font-size);
   line-height: normal;
   background: var(--jse-background-color);
-  color: var(--jse-color);
+  color: var(--jse-text-color);
 }
