--- a/src/lib/components/modals/Modal.scss
+++ b/src/lib/components/modals/Modal.scss
@@ -20,8 +20,8 @@
   font-family: var(--jse-font-family);
   font-size: var(--jse-font-size);
   line-height: normal;
-  background: var(--jse-modal-background-color);
-  color: var(--jse-color);
+  background: var(--jse-modal-background);
+  color: var(--jse-text-color);
 
   .jse-contents {
     padding: 20px;
