--- a/src/lib/components/modals/TransformWizard.scss
+++ b/src/lib/components/modals/TransformWizard.scss
@@ -57,7 +57,7 @@ table.jse-transform-wizard {
           border: var(--jse-input-border);
           border-radius: var(--jse-input-radius);
           outline: none;
-          background: var(--jse-modal-input-background);
+          background: var(--jse-input-background);
           color: inherit;
 
           &:focus {
