--- a/src/lib/plugins/value/components/ColorPicker.scss
+++ b/src/lib/plugins/value/components/ColorPicker.scss
@@ -10,7 +10,7 @@
   padding: 0;
   margin: $margin;
 
-  border: 1px solid var(--jse-color);
+  border: 1px solid var(--jse-text-color);
   border-radius: 2px;
   background: inherit;
   outline: none;
