--- a/src/lib/themes/jse-theme-default.css
+++ b/src/lib/themes/jse-theme-default.css
@@ -1,5 +1,5 @@
 :root {
-  /* over all fonts and sizes */
+  /* over all fonts, sizes, and colors */
   --jse-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu,
     Cantarell, 'Helvetica Neue', sans-serif;
   /* "consolas" for Windows, "menlo" for Mac with fallback to "monaco", 'Ubuntu Mono' for Ubuntu */
@@ -12,69 +12,42 @@
   --jse-indent-size: calc(1em + 4px);
   --jse-color-picker-button-size: 1em;
   --jse-padding: 10px;
-  --jse-a-color: #156fc5;
-  --jse-a-color-highlight: #0f508d;
-
-  /* over all colors */
   --jse-theme-color: #3883fa;
   --jse-theme-color-highlight: #5f9dff;
   --jse-background-color: #fff;
-  --jse-color: #4d4d4d;
-  --jse-color-inverse: #fff;
-  --jse-border: 1px solid #d7d7d7;
+  --jse-text-color: #4d4d4d;
+  --jse-text-color-inverse: #fff;
   --jse-error-color: #ee5341;
-  --jse-selection-background-color: #d3d3d3;
-  --jse-selection-background-light-color: #e8e8e8;
-  --jse-hover-background-color: rgba(0, 0, 0, 0.06);
-  --jse-selection-inline-color: #656565;
-  --jse-collapsed-items-background-color: #f5f5f5;
-  --jse-collapsed-items-selected-background-color: #c2c2c2;
-  --jse-collapsed-items-link-color: rgba(0, 0, 0, 0.38);
-  --jse-collapsed-items-link-color-highlight: #ee5341;
-  --jse-edit-outline: 2px solid #656565;
-  --jse-controls-box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.24);
-  --jse-disabled-color: #9d9d9d;
 
-  /* messages */
-  --jse-message-error-background: var(--jse-error-color);
-  --jse-message-error-color: var(--jse-color-inverse);
-  --jse-message-warning-background: #fdc539;
-  --jse-message-warning-color: var(--jse-color-inverse);
-  --jse-message-success-background: #9ac45d;
-  --jse-message-success-color: var(--jse-color-inverse);
-  --jse-message-info-background: var(--jse-disabled-color);
-  --jse-message-info-color: var(--jse-color-inverse);
-  --jse-message-action-background: rgba(255, 255, 255, 0.2);
-  --jse-message-action-background-highlight: rgba(255, 255, 255, 0.3);
-
-  /* main menu, modal header */
-  --jse-menu-color: var(--jse-color-inverse);
+  /* main, menu, modal */
+  --jse-main-border: 1px solid #d7d7d7;
+  --jse-menu-color: var(--jse-text-color-inverse);
   --jse-menu-button-size: 32px;
-  --jse-modal-background-color: #f5f5f5;
+  --jse-modal-background: #f5f5f5;
   --jse-modal-overlay-background: rgba(0, 0, 0, 0.3);
   --jse-modal-code-background: rgba(0, 0, 0, 0.05);
-  --jse-modal-input-background: var(--jse-background-color);
 
-  /* navigation bar, gutter, search box */
-  --jse-panel-background-color: #ebebeb;
-  --jse-panel-color: var(--jse-color);
-  --jse-panel-color-light: #656565;
+  /* panels: navigation bar, gutter, search box */
+  --jse-panel-background: #ebebeb;
+  --jse-panel-color: var(--jse-text-color);
   --jse-panel-color-readonly: #b2b2b2;
-  --jse-panel-border: var(--jse-border);
-  --jse-panel-dropdown-background: var(--jse-background-color);
-  --jse-panel-dropdown-background-highlight: #e5e5e5;
-  --jse-panel-dropdown-color: #656565;
-  --jse-panel-input-background: var(--jse-background-color);
+  --jse-panel-border: var(--jse-main-border);
   --jse-panel-button-color: inherit;
   --jse-panel-button-background: transparent;
-  --jse-panel-button-color-highlight: var(--jse-color);
+  --jse-panel-button-color-highlight: var(--jse-text-color);
   --jse-panel-button-background-highlight: #e0e0e0;
+
+  /* navigation-bar */
+  --jse-navigation-bar-color: #656565;
+  --jse-navigation-bar-background: var(--jse-background-color);
+  --jse-navigation-bar-background-highlight: #e5e5e5;
+  --jse-navigation-bar-dropdown-color: #656565;
 
   /* context menu */
   --jse-context-menu-background: #656565;
   --jse-context-menu-background-highlight: #7a7a7a;
-  --jse-context-menu-color: var(--jse-color-inverse);
-  --jse-context-menu-color-disabled: var(--jse-disabled-color);
+  --jse-context-menu-color: var(--jse-text-color-inverse);
+  --jse-context-menu-color-disabled: #9d9d9d;
   --jse-context-menu-separator-color: #7a7a7a;
   --jse-context-menu-button-background: var(--jse-context-menu-background);
   --jse-context-menu-button-background-highlight: var(--jse-context-menu-background-highlight);
@@ -83,7 +56,7 @@
   --jse-context-menu-tip-background: rgba(255, 255, 255, 0.2);
   --jse-context-menu-tip-color: inherit;
 
-  /* json key and values */
+  /* contents: json key and values */
   --jse-key-color: #1a1a1a;
   --jse-value-color: #1a1a1a;
   --jse-value-color-number: #ee422e;
@@ -92,31 +65,57 @@
   --jse-value-color-string: #008000;
   --jse-value-color-url: #008000;
   --jse-delimiter-color: rgba(0, 0, 0, 0.38);
+  --jse-edit-outline: 2px solid #656565;
 
-  /* highlighting of search matches */
+  /* contents: selected or hovered */
+  --jse-hover-background-color: rgba(0, 0, 0, 0.06);
+  --jse-selection-background-color: #d3d3d3;
+  --jse-selection-background-light-color: #e8e8e8;
+
+  /* contents: section of collapsed items in an array */
+  --jse-collapsed-items-background-color: #f5f5f5;
+  --jse-collapsed-items-selected-background-color: #c2c2c2;
+  --jse-collapsed-items-link-color: rgba(0, 0, 0, 0.38);
+  --jse-collapsed-items-link-color-highlight: #ee5341;
+
+  /* contents: highlighting of search matches */
   --jse-search-match-color: #ffe665;
   --jse-search-match-outline: 1px solid #ffd700;
   --jse-search-match-active-color: #ffd700;
   --jse-search-match-active-outline: 1px solid #e1be00;
 
-  /* inline tags inside the JSON document */
+  /* contents: inline tags inside the JSON document */
   --jse-tag-background: rgba(0, 0, 0, 0.2);
-  --jse-tag-color: var(--jse-color-inverse);
+  --jse-tag-color: var(--jse-text-color-inverse);
 
-  /* input fields in modals */
+  /* controls in modals: inputs, buttons, and `a` */
+  --jse-controls-box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.24);
+  --jse-input-background: var(--jse-background-color);
+  --jse-input-background-readonly: transparent;
   --jse-input-border: 1px solid #d8dbdf;
   --jse-input-border-focus: 1px solid var(--jse-theme-color);
-  --jse-input-background-readonly: transparent;
   --jse-input-radius: 3px;
-
-  /* buttons in modals */
   --jse-button-background: #e0e0e0;
   --jse-button-background-highlight: #e7e7e7;
-  --jse-button-color: var(--jse-color);
+  --jse-button-color: var(--jse-text-color);
   --jse-button-primary-background: var(--jse-theme-color);
   --jse-button-primary-background-highlight: var(--jse-theme-color-highlight);
   --jse-button-primary-background-disabled: #9d9d9d;
-  --jse-button-primary-color: var(--jse-color-inverse);
+  --jse-button-primary-color: var(--jse-text-color-inverse);
+  --jse-a-color: #156fc5;
+  --jse-a-color-highlight: #0f508d;
+
+  /* messages */
+  --jse-message-error-background: var(--jse-error-color);
+  --jse-message-error-color: var(--jse-text-color-inverse);
+  --jse-message-warning-background: #fdc539;
+  --jse-message-warning-color: var(--jse-text-color-inverse);
+  --jse-message-success-background: #9ac45d;
+  --jse-message-success-color: var(--jse-text-color-inverse);
+  --jse-message-info-background: #9d9d9d;
+  --jse-message-info-color: var(--jse-text-color-inverse);
+  --jse-message-action-background: rgba(255, 255, 255, 0.2);
+  --jse-message-action-background-highlight: rgba(255, 255, 255, 0.3);
 
   /* svelte-select */
   --itemIsActiveBG: #3883fa;
@@ -125,6 +124,6 @@
   --background: #fff;
 
   /* color picker */
-  --jse-color-picker-background: var(--jse-panel-background-color);
+  --jse-color-picker-background: var(--jse-panel-background);
   --jse-color-picker-border-box-shadow: #cbcbcb 0 0 0 1px;
 }
